--- a/index.html
+++ b/index.html
@@ -224,7 +224,7 @@
       </div>
     </div>
     <div data-w-id="9780ad38-4825-94ae-14b2-ad06b6b8e142" class="step1">
-      <h1 class="history-header">Connecting the word wasn&#x27;t<br> impossible thanks to those innovates. </h1>
+      <h1 class="history-header">Connecting the word wasn&#x27;t<br> impossible thanks to those innovations. </h1>
     </div>
     <div class="step6">
       <div class="text-container">
